# cu-multi-dataset

./: .gitignore  README.md  make_ros2_bag.py
cu_multi_vis_toolkit/: CMakeLists.txt  CMakeLists_linux.txt
cu_multi_vis_toolkit/config/: camera_params.txt
cu_multi_vis_toolkit/include/cu_multi_vis_toolkit/: camera.h  dataset.h  pointcloud.h  pose.h
cu_multi_vis_toolkit/mesh/: hunter.mtl
cu_multi_vis_toolkit/src/: camera.cpp  pointcloud.cpp  pose.cpp  test_visualization.cpp
experimental/: save_lidar_world_poses.py
rosbag_tools/dataset_binarization/: bag_parser.py  dataset_to_bin.py  main.py
rosbag_tools/dataset_binarization/config/: robot1_config.yaml
rosbag_tools/dataset_binarization/utils/: interpolation.py  rosmsg_to_numpy.py  tf.py
rosbag_tools/docker/: Dockerfile  build_docker.sh  run_and_enter_container.bash
rosbag_tools/old/: create_multi_robot_bag.py  extract_data.py  fix_rosbag_timing.py  get_lidar_poses.py  get_sequence_stats.py  read_rosbag.py  slerp_odom_per_lidar_scan.py  split_bags.py  split_merge_bag.py
rosbag_tools/old/vis/: plot_accumulated_lidar.py  plot_accumulated_lidar_lat_lon.py  plot_gps.py
rosbag_tools/rosbag_modify/: add_bag_namespace.py  filter_bag.py  get_tf.py  merge_bags.py  shift_bag_start_times.py
rosbag_tools/rviz/: multi_robot.rviz
testing/: fix_bin_files.py  reindex_files.py
